# ProjectSafe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: discord_rpc.h
src/: main.cpp
src/app/: App.cpp  App.h
src/console/: App.cpp  App.h
src/discord/: Discord.h
src/encryption/: Encryptor.cpp  Encryptor.h
src/file/: FileManager.cpp  FileManager.h
src/gui/: GUIManager.cpp  GUIManager.h
src/gui/tasks/: DiscordThread.h
src/gui/widgets/: ChatListWidget.cpp  ChatListWidget.h  MainWidget.cpp  MainWidget.h
src/gui/widgets/chat/: ChatHeaderWidget.cpp  ChatHeaderWidget.h  ChatInputPanel.cpp  ChatInputPanel.h  ChatItemWidget.cpp  ChatItemWidget.h  ChatType.h  ChatWindowWidget.cpp  ChatWindowWidget.h
src/key/: SafeKey.cpp  SafeKey.h
src/locale/: LocalizationManager.cpp  LocalizationManager.h
src/util/: Colors.cpp  Colors.h
